package pl.pwr.student.gogame.model.commands;

public enum CommandType {
  PUT,
  PASS,
}
