package pl.pwr.student.gogame.model.exceptions;

public class PlayersNotSettledException extends Exception {
  public PlayersNotSettledException() {
    super();
  }
}
